# TcpClient

./: .qmake.stash  CMakeLists.txt  TcpClient.pro.user.3a194e4.4.8-pre1  TcpClient.qtvscr  TcpClient.sln  TcpClient.vcxproj  TcpClient.vcxproj.filters  book.cpp  book.h  client.config  demo.cpp  demo.h  friend.cpp  main.cpp  my.h  online.cpp  opewidget.cpp  opewidget.h  privatechat.cpp  privatechat.h  protocol.h  tcpclient.cpp  tcpclient.h  tcpclient.ui  ui_online.h  ui_tcpclient.h
